<resources>
    <string name="app_name">Sekolah</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_keuangan">Keuangan</string>
    <string name="title_pesan">Pesan</string>
    <string name="title_pengguna">Pengguna</string>
    <string name="lupa_password">Lupa password? <font color='#ff0000'>Klik Disini</font></string>

    <!--  Beranda  -->
    <string name="username">Profile Name</string>
    <string name="alarm">Hari ini masuk sekolah jam 07.00</string>
    <string name="menu_absensi">Absensi</string>
    <string name="menu_pelajaran">Pelajaran</string>
    <string name="menu_akademuik">Akademik</string>
    <string name="menu_nilai">Nilai</string>
    <string name="menu_raport">Raport</string>
    <string name="menu_prestasi">Prestasi</string>
    <string name="menu_ekskul">Ekskul</string>
    <string name="menu_lainnya">Lainnya</string>
    <string name="pengumuman">Informasi penting untuk Ibu/Bapak</string>
    <string name="berita">Berita Sekolah</string>
    <string name="judul_berita">Berita yang diinformasikan</string>
    <string name="lihat_semua">Lihat semua</string>

    <!--  Keuangan  -->
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="tagihan">Tagihan</string>
    <string name="dana">Rp. 0.000.000</string>
    <string name="bayar">Bayar</string>
    <string name="rincian">Rincian</string>
    <string name="riwayat">Riwayat</string>
    <string name="parameter">1 Bulan | 3 Parameter</string>
    <string name="laporan">Laporan</string>
    <string name="kartu_piutang">Kartu Piutang</string>
    <string name="kartu_deposit">Kartu Deposit</string>

    <!--  Pesan  -->
    <string name="tanggal">01 Januari 2019</string>
    <string name="pesan">Pesan</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="judul_pesan">Judul Pesan</string>
    <string name="isi_pesan">Isi Pesan</string>

    <!--  Pengguna  -->
    <string name="orang_tua">Orang Tua Murid</string>
    <string name="email">example.mail@gmail.com</string>
    <string name="notelp">081234567890</string>
    <string name="siswa_aktif">Siswa Aktif</string>
    <string name="biodata">Biodata Siswa</string>
    <string name="keluar">Keluar</string>

    <!--  Metode Pembayaran  -->
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="text_no_id_bank">Nomor ID Bank</string>
    <string name="no_id_bank">0000 0000 0000 0000</string>
    <string name="cara_pembayaran">Cara Pembayaran</string>

    <!--  Rincian  -->
    <string name="rincian_tagihan">Rincian Tagihan</string>
    <string name="rincian_kode_tagihan">ABCDE09876</string>
    <string name="rincian_parameter">00 Parameter</string>
    <string name="bulan">Januari 2019</string>

    <!--  Riwayat Transaksi  -->
    <string name="riwayat_transaksi">Riwayat Transaksi</string>
    <string name="riwayat_deskripsi_tagihan">Deskripsi Tagihan</string>
    <string name="riwayat_deskripsi_bayar">Deskripsi Pembayaran</string>
    <string name="riwayat_tanggal">dd/mm/yyyy | 87654nbvc</string>
    <string name="riwayat_tagihan">Tagihan</string>
    <string name="riwayat_pembayaran">Pembayaran</string>
    <string name="piutang_nama">Nama</string>
    <string name="piutang_profile_name">: Profile Name</string>
    <string name="piutang_nis">: 123456789</string>
    <string name="piutang_bank">: 987654321234560</string>
    <string name="piutang_judulbank">ID VA/Bank</string>
    <string name="piutang_judulnis">NIS</string>
    <string name="piutang_saldo">: Rp. 0</string>
    <string name="piutang_judulsaldo">Saldo PDD</string>
    <string name="piutang_keterangan">Keterangan</string>
    <string name="piutang_nilai">Nilai</string>
    <string name="piutang_transaksi">Transaksi</string>
    <string name="list_piutang_tagihan">+ 1.000.000</string>
    <string name="list_piutang_nilai">1.080.000</string>
    <string name="deposit_kartudeposit">Kartu Deposit</string>
    <string name="deposit_riwayat">Riwayat</string>
    <string name="deposit">Deposit</string>
    <string name="rincian_deposit">Rincian Deposit</string>
    <string name="piutang_kelas">Kelas</string>
    <string name="piutang_kelas_text">: X 10 RPL</string>
    <string name="angkatan">Angkatan</string>
    <string name="angkatan_text">: 2019-2020</string>
    <string name="rpl">: REKAYASA PERANGKAT LUNAK</string>
    <string name="absensi_detail_absensi">Detail Absensi</string>
    <string name="short_date">02/19/2019</string>
    <string name="akademik">Akademik</string>
    <string name="raport">Raport</string>
    <string name="nilai">Nilai</string>
    <string name="ekstrakurikuler">Ekstrakurikuler</string>
    <string name="prestasi">Prestasi</string>
    <string name="text_berita">Pada hari Senin, tanggal 8 April 2019 telah dilaksanakan upacara bendera sekaligus acara Dies Natalis SMKN 1 Cimahi yang ke 42 di lapangan upacara SMKN 1 Cimahi. Bertindak selaku pembina upacara adalah Ibu Dr. Sri Prihatiningsih, M.Pd. Upacara hari Senin ini terasa sangat spesial selain karena berbarengan dengan perayaan Dies Natalis SMKN 1 Cimahi yang ke 42 juga dengan adanya Pembukaan Kegiatan PFM (Pembinaan Fisik dan Mental) di SMKN 1 Cimahi angkatan ke 29. Acara pembukaan PFM kali ini diramaikan dengan atraksi dari para siswa kelas XII berupa demo dan tarian yang menunjukan semangat para siswa dalam dalam menghadapi semua kondisi yang bakal mereka hadapi nanti di industri dan di masyarakat. Sementara itu dalam amanatnya, Ibu Sri selaku pembina upacara mewakili bapak kepala sekolah menekankan pentingnya disiplin. Dikatakan oleh beliau bahwa disiplin yang baik adalah disiplin yang datang diri sendiri, bukan karena takut oleh orang lain. Dan dengan bermodal disiplin yang baik semua siswa akan mudah beradaptasi di lingkungan manapun karena para siswa telah terbiasa pola hidup yang teratur. Beliau juga berharap bahwa dengan semangat Dies Natalis yang ke 42 seluruh siswa SMKN 1 Cimahi dapat terus meningkatkan disiplin dan terus berprestasi baik di kancah nasional maupun internasional. Dengan demikian nama baik SMKN 1 Cimahi akan terus berkibar. (Doc/Admin)</string>
    <string name="dies_natalis">Pembukaan Dies Natalis Angkatan 42</string>
    <string name="apel_pagi">Apel Pagi dalam rangka Memperingati HUT PRAMUKA yang ke 55 di SMK Negeri 1 Cimahi</string>
    <string name="text_berita2">Berikut adalah Kegiatan Apel Pagi dalam rangka Memperingati HUT PRAMUKA yang ke 55 di SMK Negeri 1 Cimahi yang dilaksanakan pada hari Sabtu 20 Agustus dengan Pembina Mabigus SMK Negeri 1 Cimahi yaitu Bpk. Drs. H. Ermizul, M.Pd dan petugas dari Pramuka Jaga Dhita. Pada kesempatan ini juga, 3 orang anggota Pramuka membacakan UUD 1945, Teks Pancasila dan Dasa Dharma Pramuka.</string>
    <string name="isi_informasi">Penerimaan mahasiswa baru PTN tahun 2020 dilaksanakan melalui tiga jalur dengan masing-masing kuota yang berbeda, yaitu Seleksi Nasional Masuk Perguruan Tinggi Negeri (SNMPTN), Seleksi Bersama Masuk Perguruan Tinggi Negeri ( SBMPTN), dan seleksi mandiri. \n\nJalur SNMPTN memiliki kuota minimum 20 persen dari daya tampung PTN. Jalur SBMPTN memiliki kuota minimum 40 persen. Sedangkan seleksi mandiri memiliki kuota maksimum 30 persen dari daya tampung PTN. \n\nBerdasarkan kuota tersebut, jalur dengan kuota paling besar adalah SBMPTN. Dalam jalur ini, UTBK adalah hal yang harus dipahami dengan baik.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
