<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">
        <TextView
            android:id="@+id/list_piutang_tanggal"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/riwayat_tanggal"/>
        <TextView
            android:id="@+id/list_piutang_transaksi"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/list_piutang_tagihan"/>
        <TextView
            android:id="@+id/list_piutang_nilai"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/list_piutang_nilai"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="12">
        <TextView
            android:id="@+id/list_piutang_deskripsi"
            android:layout_weight="6"
            android:paddingRight="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:text="@string/riwayat_deskripsi_tagihan"/>
    </LinearLayout>
</LinearLayout>