<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <TextView
                    android:id="@+id/tv_back"
                    android:gravity="center"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_arrow_back_black_24dp"
                    android:drawableLeft="@drawable/ic_arrow_back_black_24dp"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kartu_piutang"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="5dp"
                android:background="@color/colorSoftGrey"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_margin="20dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_user"/>
                <TextView
                    android:id="@+id/tv_piutang_sekolah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp"
                    android:text="@string/nama_sekolah"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_nama"/>
                <TextView
                    android:id="@+id/tv_piutang_nama"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_profile_name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_judulnis"/>
                <TextView
                    android:id="@+id/tv_piutang_nis"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_nis"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_judulbank"/>
                <TextView
                    android:id="@+id/tv_piutang_bank"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_bank"
                    android:drawableEnd="@drawable/ic_listbiru"
                    android:drawableRight="@drawable/ic_listbiru"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_kelas"/>
                <TextView
                    android:id="@+id/tv_piutang_kelas"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_kelas_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/angkatan"/>
                <TextView
                    android:id="@+id/tv_piutang_angkatan"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/angkatan_text"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="Jurusan"/>
                <TextView
                    android:id="@+id/tv_piutang_jurusan"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rpl"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:weightSum="6">
                <TextView
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_judulsaldo"/>
                <TextView
                    android:id="@+id/tv_piutang_saldo"
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/piutang_saldo"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:background="@color/colorBluePrimary"
                    android:orientation="horizontal"
                    android:weightSum="12">
                    <TextView
                        android:layout_weight="6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:text="@string/piutang_keterangan"/>
                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:text="@string/piutang_transaksi"/>
                    <TextView
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorWhite"
                        android:text="@string/piutang_nilai"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/piutang_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:minHeight="250dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>
</ScrollView>