<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_margin="10dp"
    android:padding="5dp"
    android:layout_height="wrap_content">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/pengguna_items_profile"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:src="@drawable/ic_user"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/pengguna_items_orangtua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/orang_tua"
            android:textSize="14sp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:id="@+id/pengguna_items_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:id="@+id/pengguna_items_notelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notelp"
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
</LinearLayout>