<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_marginBottom="20dp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:id="@+id/list_rincian_tgl"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textColor="@color/colorBlack"
            android:text="@string/tanggal"/>
        <TextView
            android:id="@+id/list_rincian_totalparameter"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textSize="10sp"
            android:text="@string/rincian_parameter"/>
    </LinearLayout>
    <TextView
        android:id="@+id/list_rincian_kode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/rincian_kode_tagihan"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_rincian_recyclerview_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>